--- a/test/demo_test.ipynb
+++ b/test/demo_test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -10,21 +10,17 @@
           "output_type": "stream",
           "text": [
             "🧪 STEP 1: Quick validation...\n",
-            "⚠️  Warning: Path percentages sum to 99.0% (should be 100%)\n",
-            "✅ Loaded workflow: teacher_platform_user_journeys\n",
-            "   • Description: Simulated usage of classroom management platform across key workflows with realistic delays and depth\n",
-            "   • Paths: 10\n",
+            "✅ Loaded workflow: signature_aviation_service_booking\n",
+            "   • Description: Simulates typical user behavior for Signature Aviation's private aviation booking platform, focusing on the multi-airport comparison path.\n",
+            "   • Paths: 1\n",
             "🚀 Calling execute_workflow endpoint...\n",
-            "   • Workflow: teacher_platform_user_journeys\n",
-            "   • App URL: https://teach-track-bloom.lovable.app/\n",
+            "   • Workflow: signature_aviation_service_booking\n",
+            "   • App URL: https://pendo-aviation-showcase.lovable.app/\n",
             "   • Users: 100 (batch: 25)\n",
             "   • Test mode: True\n",
             "   • Mode: Stateless (no database)\n",
-            "🧪 Test completed in 25.38s\n",
-            "❌ TEST FAILED - 1 failed actions found:\n",
-            "  📍 complete_roster_management: 1 failures\n",
-            "    Step 5 (click): text='User'\n",
-            "    Error: Page.wait_for_selector: Timeout 300ms exceeded.\n"
+            "🧪 Test completed in 9.28s\n",
+            "❌ TEST FAILED - Backend error: Page.wait_for_timeout: Target page, context or browser has been closed\n"
           ]
         }
       ],
@@ -35,8 +31,8 @@
         "# First run with test_mode=True for quick validation\n",
         "print(\"🧪 STEP 1: Quick validation...\")\n",
         "result = sync_run_workflow(\n",
-        "    workflow_file=\"workflows/ed_tech.json\",\n",
-        "    app_url=\"https://teach-track-bloom.lovable.app/\",\n",
+        "    workflow_file=\"../workflows/test.json\",\n",
+        "    app_url=\"https://pendo-aviation-showcase.lovable.app\",\n",
         "    user_count=100,\n",
         "    batch_size=25,\n",
         "    test_mode=True  # This is the new flag!\n",
